--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 		<tr>
 
 			<td>
-				<a href="pdf/11.pdf">
-					<img src="image/book1/1.jpg" width="150" height="200" />
+				<a href="/11.pdf">
+					<img src="1.jpg" width="150" height="200" />
 				</a>
 			</td>
 
