--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
 
 			<td>
 				<a href="#">
-					<img src="image/B2.jpg" width="150" height="200" />
+					<img src="B2.jpg" width="150" height="200" />
 				</a>
 			</td>
 
 			<td>
 				<a href="#">
-					<img src="image/B3.jpg" width="150" height="200" />
+					<img src="B3.jpg" width="150" height="200" />
 				</a>
 
 			</td>
 			<td>
 				<a href="#">
-					<img src="image/B4.jpg" width="150" height="200" />
+					<img src="B4.jpg" width="150" height="200" />
 				</a>
 
 			</td>
@@ -117,7 +117,7 @@
 
 			<td>
 				<a href="#">
-					<img src="image/B4.jpg" width="200" height="300" />
+					<img src="B4.jpg" width="200" height="300" />
 				</a>
 			</td>
 			<td>
