--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<tr>
 			<td>
 				<a href="#">
-					<img src="image/B2.jpg" width="200" height="300" />
+					<img src="B2.jpg" width="200" height="300" />
 				</a>
 			</td>
 			<td>
@@ -146,7 +146,7 @@
 		<tr>
 			<td>
 				<a href="#">
-					<img src="image/B3.jpg" width="200" height="300" />
+					<img src="B3.jpg" width="200" height="300" />
 				</a>
 			</td>
 			<td>
